--- a/views/index.jade
+++ b/views/index.jade
@@ -4,8 +4,8 @@ block content
   h1= title
   p Welcome to #{title}
 
-  table
-    tr 
+  table(class="dayTable")
+    tr(class="dayHeader")
       th Datum
       th LHF
       th DLK
